# openslam_vertigo

./: README
datasets/: generateDataset.py
examples/robustISAM2/: CMakeLists.txt  robustISAM2.cpp
include/gtsam2/: betweenFactorSwitchable.h  switchVariableLinear.h  switchVariableSigmoid.h
src/gtsam2/: CMakeLists.txt
